Added entry for posts of friends to navigation

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1226,6 +1226,7 @@ navi.postPost                    = add post
 navi.postPublication             = post publication
 navi.postPublicationPopup        = post publication (popup)
 navi.posts                       = posts
+navi.postsOfFriends              = posts of friends
 navi.privatePosts                = private posts
 navi.publication                 = publication
 navi.recentlyDiscussedPosts      = discussed posts
