--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1177,6 +1177,7 @@ navi.postPost                    = Eintragen
 navi.postPublication             = Publikation eintragen
 navi.postPublicationPopup        = Publikation eintragen (popup)
 navi.posts                       = Eintr\u00E4ge
+navi.postsOfFriends              = Eintr\u00E4ge von Freunden
 navi.privatePosts                = private Eintr\u00E4ge
 navi.publication                 = Publikation
 navi.recentlyDiscussedPosts      = diskutierte Eintr\u00E4ge
