--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -353,7 +353,7 @@ cv.hint3                   = Publikationen und Lesezeichen aus Ihrer Sammlung mi
 cv.hint4                   = (Dieser Hinweis ist nur f\u00FCr Sie auf Ihrem eigenen Lebenslauf sichtbar.) 
 cv.hobbies                 = Hobbys
 cv.institution             = Institution
-cv.layout.name.clear       = Leer
+cv.layout.name.clear       = Leeren
 cv.layout.name.curr        = Jetziges
 cv.layout.name.def1en      = Vorlage 1 [Englisch]
 cv.layout.name.def1ger     = Vorlage 1 [Deutsch]
