added missing delimiter.help text

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -411,7 +411,7 @@ delete.confirm.post          = Do you really want to delete this post?
 delete.confirm.review        = Do you really want to delete this review?
 
 delimiter = delimiter
-
+delimiter.help = Choose the delimiter that separates the tags (keywords) in the BibTeX/EndNote snippet.
 delimiters.comma      = comma
 delimiters.semicolon  = semicolon
 delimiters.whitespace = whitespace
