--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -410,7 +410,7 @@ delete.confirm.post          = Wollen Sie diesen Eintrag wirklich l\u00F6schen?
 delete.confirm.review        = Wollen Sie diese Rezension wirklich l\u00F6schen?
 
 delimiter = Trennzeichen
-
+delimiter.help = W\u00E4hlen Sie das Zeichen aus, durch das die Tags (Keywords) aus dem BibTex-/EndNote-Schnipsel getrennt sind.
 delimiters.comma      = Komma
 delimiters.semicolon  = Semikolon
 delimiters.whitespace = Leerzeichen
@@ -916,7 +916,7 @@ import.kind.help.bundles                            = Tag-Bundles: Ihre Deliciou
 import.newResources                                 = {0} {1} wurden angelegt:
 import.nonImportedResources                         = {0} {1} wurden nicht importiert, da diese bereits in Ihrer Sammlung waren:
 import.overwrite                                    = Die Lesezeichen von {0} \u00FCberschreiben die Lesezeichen von {1}
-import.overwrite2                                   = Wenn ein importierter Eintrage die gleiche Publikation referenziert wie ein bereits existierender Eintrag, dann wird der \u00E4ltere Eintrag \u00FCberschrieben.
+import.overwrite2                                   = Wenn ein importierter Eintrag die gleiche Publikation referenziert wie ein bereits existierender Eintrag, dann wird der \u00E4ltere Eintrag \u00FCberschrieben.
 import.overwritten                                  = \u00DCberschreiben
 import.results                                      = Ergebnisse des Imports
 import.save_all_possible                            = Ignoriere Fehler
