--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -393,7 +393,7 @@ delete.confirm.post          = \u0412\u044B \u0434\u0435\u0439\u0441\u0442\u0432
 delete.confirm.review        = \u0412\u044B \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0442\u0435\u043B\u044C\u043D\u043E \u0445\u043E\u0442\u0438\u0442\u0435 \u0443\u0434\u0430\u043B\u0438\u0442\u044C \u044D\u0442\u0443 \u0440\u0435\u0446\u0435\u043D\u0437\u0438\u044E?
 
 delimiter = \u0420\u0430\u0437\u0434\u0435\u043B\u0438\u0442\u0435\u043B\u044C
-
+delimiter.help = 
 delimiters.comma      = \u0437\u0430\u043F\u044F\u0442\u0430\u044F
 delimiters.semicolon  = \u0442\u043E\u0447\u043A\u0430 \u0441 \u0437\u0430\u043F\u044F\u0442\u043E\u0439
 delimiters.whitespace = \u043F\u0440\u043E\u0431\u0435\u043B
