added German messages for disambiguation

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -455,7 +455,7 @@ disambiguation.noInfo                               = No additional information
 disambiguation.notFound                             = No persons found for author name {0}
 disambiguation.otherPerson                          = Other person
 disambiguation.otherPerson.modal.abortButton        = Abort
-disambiguation.otherPerson.modal.msg                = You can add a new person with the name "{0}", or you can "{0}" with a person entry that is so far only been referred to by another name (such as a former name or an alias name).
+disambiguation.otherPerson.modal.msg                = You can add a new person with the name "{0}", or you can connect "{0}" with a person entry that is so far only been referred to by another name (such as a former name or an alias name).
 disambiguation.otherPerson.modal.newPersonButton    = Add new person
 disambiguation.otherPerson.modal.search.placeholder = Search person..
 disambiguation.otherPerson.modal.selectPersonButton = Select person
