deleting post of group user works

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -411,7 +411,9 @@ delete.confirm.post          = Do you really want to delete this post?
 delete.confirm.review        = Do you really want to delete this review?
 
 delimiter = delimiter
-delimiter.help = Choose the delimiter that separates the tags (keywords) in the BibTeX/EndNote snippet.
+
+delimiter.help        = Choose the delimiter that separates the tags (keywords) in the BibTeX/EndNote snippet.
+
 delimiters.comma      = comma
 delimiters.semicolon  = semicolon
 delimiters.whitespace = whitespace
@@ -604,6 +606,7 @@ error.friend_page_without_friendname         = Sorry, this page does not exist o
 error.friends_page_not_logged_in             = In order to access this page, you need to be logged in.
 error.furtherInformations                    = For further information read the error-message: {0}
 error.general                                = An unknown error occured. Please try again later.\u0009
+error.general.edit                           = You cannot change this post.
 error.general.login                          = You have to be logged in.
 error.group.secure.answer                    = Type in "yes" to delete this group.
 error.group_page_without_groupname           = Sorry, this page does not exist on our server. I your want to access a group page, please specify a group name like /group/GROUPNAME
@@ -2008,7 +2011,7 @@ settings.advanced                                           = advanced
 settings.all                                                = all
 settings.alphabet                                           = alphabet
 settings.apidoc                                             = API Documentation
-settings.apisupport											= We could not obtain your API key. Please reload the page. If the problem is still occuring, please contact the API support: <a href="mailto:api-support@bibsonomy.org">api-support@bibsonomy.org</a>
+settings.apisupport                                         = We could not obtain your API key. Please reload the page. If the problem is still occuring, please contact the API support: <a href="mailto:api-support@bibsonomy.org">api-support@bibsonomy.org</a>
 settings.bookmark                                           = show bookmarks
 settings.browser.fileselect                                 = select your file
 settings.browser.fileselect.help                            = a file containing your bookmarks exported from firefox
