--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -410,7 +410,9 @@ delete.confirm.post          = Wollen Sie diesen Eintrag wirklich l\u00F6schen?
 delete.confirm.review        = Wollen Sie diese Rezension wirklich l\u00F6schen?
 
 delimiter = Trennzeichen
-delimiter.help = W\u00E4hlen Sie das Zeichen aus, durch das die Tags (Keywords) aus dem BibTex-/EndNote-Schnipsel getrennt sind.
+
+delimiter.help        = W\u00E4hlen Sie das Zeichen aus, durch das die Tags (Keywords) aus dem BibTex-/EndNote-Schnipsel getrennt sind.
+
 delimiters.comma      = Komma
 delimiters.semicolon  = Semikolon
 delimiters.whitespace = Leerzeichen
@@ -434,7 +436,7 @@ disambiguation.close                                = Schlie\u00DFen
 disambiguation.fromPost                             = Von der Publikation
 disambiguation.header                               = Disambiguierung
 disambiguation.link.modal.abortButton               = Abbrechen
-disambiguation.link.modal.msg                       = Ihre Entscheidung \u00FCber die Person, die mit der Publikation assoziiert werden soll, kann in unserem System gespeichert werden, sodass andere Benutzer diese Entscheidung nicht erneut treffen müssen. M\u00F6chten Sie Ihre Entscheidung speichern?
+disambiguation.link.modal.msg                       = Ihre Entscheidung \u00FCber die Person, die mit der Publikation assoziiert werden soll, kann in unserem System gespeichert werden, sodass andere Benutzer diese Entscheidung nicht erneut treffen m\u00FCssen. M\u00F6chten Sie Ihre Entscheidung speichern?
 disambiguation.link.modal.saveButton                = Ja, speichern
 disambiguation.link.modal.title                     = Helfen Sie Ihrer Community mit Ihrer Entscheidung.
 disambiguation.link.modal.viewButton                = Nein, nur die Person anzeigen.
@@ -464,7 +466,7 @@ disambiguation.otherPerson.modal.title              = Person ausw\u00E4hlen oder
 disambiguation.otherPersonButton                    = Andere Person
 disambiguation.person                               = Person
 disambiguation.personsPanelHeader                   = Personen mit dem Namen
-disambiguation.pleaseChooseMsg                      = Bitte wählen Sie eine Person mit dem Namen "{0}" passend zu dem Eintrag:
+disambiguation.pleaseChooseMsg                      = Bitte w\u00E4hlen Sie eine Person mit dem Namen "{0}" passend zu dem Eintrag:
 disambiguation.postPanelHeader                      = Verwandter Eintrag
 disambiguation.searchPersonButton                   = Einen anderen Namen suchen
 
@@ -601,6 +603,7 @@ error.friend_page_without_friendname         = Diese Seite existiert leider nich
 error.friends_page_not_logged_in             = Um diese Seite zu betrachten, m\u00FCssen Sie angemeldet sein.
 error.furtherInformations                    = F\u00FCr weitere Informationen lesen Sie die Fehlernachricht: {0}
 error.general                                = Ein unbekannter Fehler ist aufgetreten. Bitte versuchen Sie es sp\u00E4ter noch einmal.
+error.general.edit                           = Sie k\u00F6nnen diesen Post nicht ver\u00E4ndern.
 error.general.login                          = Sie m\u00FCssen angemeldet sein.
 error.group.secure.answer                    = Bitte geben Sie "yes" ein, um diese Gruppe zu l\u00F6schen.
 error.group_page_without_groupname           = Diese Seite existiert leider nicht auf unserem Server. Um auf eine Gruppen-Seite zuzugreifen, verwenden Sie bitte das URL-Schema /group/GROUPNAME
@@ -1994,7 +1997,7 @@ settings.advanced                                           = Erweitert
 settings.all                                                = Alle
 settings.alphabet                                           = Alphabet
 settings.apidoc                                             = API-Dokumentation
-settings.apisupport											= Wir konnten Ihren API-Key nicht abrufen. Bitte laden Sie die Seite neu. Wenn das Problem weiterhin besteht, kontaktieren Sie bitte den API-Support: <a href="mailto:api-support@bibsonomy.org">api-support@bibsonomy.org</a>
+settings.apisupport                                         = Wir konnten Ihren API-Key nicht abrufen. Bitte laden Sie die Seite neu. Wenn das Problem weiterhin besteht, kontaktieren Sie bitte den API-Support: <a href="mailto:api-support@bibsonomy.org">api-support@bibsonomy.org</a>
 settings.bookmark                                           = Zeige Lesezeichen
 settings.browser.fileselect                                 = Dateiauswahl
 settings.browser.fileselect.help                            = Eine Datei, die Ihre aus Firefox exportierten Lesezeichen enth\u00E4lt
