--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -393,7 +393,9 @@ delete.confirm.post          = \u0412\u044B \u0434\u0435\u0439\u0441\u0442\u0432
 delete.confirm.review        = \u0412\u044B \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0442\u0435\u043B\u044C\u043D\u043E \u0445\u043E\u0442\u0438\u0442\u0435 \u0443\u0434\u0430\u043B\u0438\u0442\u044C \u044D\u0442\u0443 \u0440\u0435\u0446\u0435\u043D\u0437\u0438\u044E?
 
 delimiter = \u0420\u0430\u0437\u0434\u0435\u043B\u0438\u0442\u0435\u043B\u044C
-delimiter.help = 
+
+delimiter.help        = 
+
 delimiters.comma      = \u0437\u0430\u043F\u044F\u0442\u0430\u044F
 delimiters.semicolon  = \u0442\u043E\u0447\u043A\u0430 \u0441 \u0437\u0430\u043F\u044F\u0442\u043E\u0439
 delimiters.whitespace = \u043F\u0440\u043E\u0431\u0435\u043B
@@ -584,6 +586,7 @@ error.friend_page_without_friendname         = \u0418\u0437\u0432\u0438\u043D\u0
 error.friends_page_not_logged_in             = \u0412\u044B \u0434\u043E\u043B\u0436\u043D\u044B \u0432\u043E\u0439\u0442\u0438 \u0432 \u0441\u0438\u0441\u0442\u0435\u043C\u0443, \u0447\u0442\u043E\u0431\u044B \u043F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0434\u043E\u0441\u0442\u0443\u043F \u043A \u044D\u0442\u043E\u0439 \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0435.
 error.furtherInformations                    = \u0417\u0430 \u0434\u0430\u043B\u044C\u043D\u0435\u0439\u0448\u0435\u0439 \u0438\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u0435\u0439 \u0412\u044B \u043C\u043E\u0436\u0435\u0442\u0435 \u043E\u0431\u0440\u0430\u0442\u0438\u0442\u044C\u0441\u044F \u043A \u0441\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u044E \u043E\u0431 \u043E\u0448\u0438\u0431\u043A\u0435: {0}
 error.general                                = \u041F\u0440\u043E\u0438\u0437\u043E\u0448\u043B\u0430 \u043D\u0435\u0438\u0437\u0432\u0435\u0441\u0442\u043D\u0430\u044F \u043E\u0448\u0438\u0431\u043A\u0430. \u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u043F\u043E\u043F\u044B\u0442\u0430\u0439\u0442\u0435\u0441\u044C \u043F\u043E\u0437\u0436\u0435 \u0435\u0449\u0451 \u0440\u0430\u0437.
+error.general.edit                           = 
 error.general.login                          = \u0412\u044B \u0434\u043E\u043B\u0436\u043D\u044B \u0432\u043E\u0439\u0442\u0438 \u0432 \u0441\u0438\u0441\u0442\u0435\u043C\u0443.
 error.group_page_without_groupname           = \u0418\u0437\u0432\u0438\u043D\u0438\u0442\u0435, \u043D\u0430 \u043D\u0430\u0448\u0435\u043C \u0441\u0435\u0440\u0432\u0435\u0440\u0435 \u044D\u0442\u043E\u0439 \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u044B \u043D\u0435 \u0441\u0443\u0449\u0435\u0441\u0442\u0432\u0443\u0435\u0442. \u0415\u0441\u043B\u0438 \u0412\u044B \u0445\u043E\u0442\u0438\u0442\u0435 \u043F\u0435\u0440\u0435\u0439\u0442\u0438 \u043D\u0430 \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0443 \u0433\u0440\u0443\u043F\u043F, \u043F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u0443\u043A\u0430\u0436\u0438\u0442\u0435 \u0432 \u0441\u0442\u0440\u043E\u043A\u0435 URL-\u0430\u0434\u0440\u0435\u0441\u0430 /group/GROUPNAME
 error.illegal_activation_code                = \u0418\u0437\u0432\u0438\u043D\u0438\u0442\u0435, \u043D\u043E \u0412\u0430\u0448 \u043A\u043E\u0434 \u0430\u043A\u0442\u0438\u0432\u0430\u0446\u0438\u0438 "{0}" \u043D\u0435 \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0442\u0435\u043B\u0435\u043D.
@@ -1834,7 +1837,7 @@ settings.advanced                                           = \u0440\u0430\u0441
 settings.all                                                = \u0432\u0441\u0435
 settings.alphabet                                           = \u0430\u043B\u0444\u0430\u0432\u0438\u0442
 settings.apidoc                                             = API-\u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430\u0446\u0438\u044F
-settings.apisupport											=
+settings.apisupport                                         = 
 settings.bookmark                                           = \u043F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u0437\u0430\u043A\u043B\u0430\u0434\u043A\u0438
 settings.browser.fileselect                                 = \u0432\u044B\u0431\u0440\u0430\u0442\u044C \u0444\u0430\u0439\u043B
 settings.browser.fileselect.help                            = \u0444\u0430\u0439\u043B, \u0441\u043E\u0434\u0435\u0440\u0436\u0430\u0449\u0438\u0439 \u0412\u0430\u0448\u0438 \u0437\u0430\u043A\u043B\u0430\u0434\u043A\u0438, \u044D\u043A\u0441\u043F\u043E\u0440\u0442\u0438\u0440\u043E\u0432\u0430\u043D\u043D\u044B\u0435 \u0438\u0437 Firefox
