fixed some bugs

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -414,7 +414,9 @@ delete.confirm.post          = Do you really want to delete this post?
 delete.confirm.review        = Do you really want to delete this review?
 
 delimiter = delimiter
-delimiter.help = Choose the delimiter that separates the tags (keywords) in the BibTeX/EndNote snippet.
+
+delimiter.help        = Choose the delimiter that separates the tags (keywords) in the BibTeX/EndNote snippet.
+
 delimiters.comma      = comma
 delimiters.semicolon  = semicolon
 delimiters.whitespace = whitespace
@@ -1425,7 +1427,7 @@ persons.intro.genealogy.desc   = &nbsp;
 persons.intro.genealogy.img    = /resources/image/logo_person_genealogy_english.svg
 persons.intro.genealogy.text   = {0} Genealogy creates a genealogy of research at German universities based on user inputs. It is based on the dissertation catalog of the Deutsche Nationalbibliothek (DNB). Users enter linkages between existing dissertations (advisor information etc.) and provide information about missing dissertations.
 persons.intro.head.desc        = A Dissertation-based Genealogy of Research at German Universities
-persons.intro.head.title       = {0} Genealogy
+persons.intro.head.title       = Genealogy
 persons.intro.navi.dataset     = Who Can Participate?
 persons.intro.navi.genealogy   = What Is {0} Genealogy?
 persons.intro.navi.reg         = How Does {0} Genealogy Work?
@@ -2022,7 +2024,7 @@ settings.advanced                                           = advanced
 settings.all                                                = all
 settings.alphabet                                           = alphabet
 settings.apidoc                                             = API Documentation
-settings.apisupport											= We could not obtain your API key. Please reload the page. If the problem is still occuring, please contact the API support: <a href="mailto:api-support@bibsonomy.org">api-support@bibsonomy.org</a>
+settings.apisupport                                         = We could not obtain your API key. Please reload the page. If the problem is still occuring, please contact the API support: <a href="mailto:api-support@bibsonomy.org">api-support@bibsonomy.org</a>
 settings.bookmark                                           = show bookmarks
 settings.browser.fileselect                                 = select your file
 settings.browser.fileselect.help                            = a file containing your bookmarks exported from firefox
