--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -413,7 +413,9 @@ delete.confirm.post          = Wollen Sie diesen Eintrag wirklich l\u00F6schen?
 delete.confirm.review        = Wollen Sie diese Rezension wirklich l\u00F6schen?
 
 delimiter = Trennzeichen
-delimiter.help = W\u00E4hlen Sie das Zeichen aus, durch das die Tags (Keywords) aus dem BibTex-/EndNote-Schnipsel getrennt sind.
+
+delimiter.help        = W\u00E4hlen Sie das Zeichen aus, durch das die Tags (Keywords) aus dem BibTex-/EndNote-Schnipsel getrennt sind.
+
 delimiters.comma      = Komma
 delimiters.semicolon  = Semikolon
 delimiters.whitespace = Leerzeichen
@@ -437,7 +439,7 @@ disambiguation.close                                = Schlie\u00DFen
 disambiguation.fromPost                             = Von der Publikation
 disambiguation.header                               = Disambiguierung
 disambiguation.link.modal.abortButton               = Abbrechen
-disambiguation.link.modal.msg                       = Ihre Entscheidung \u00FCber die Person, die mit der Publikation assoziiert werden soll, kann in unserem System gespeichert werden, sodass andere Benutzer diese Entscheidung nicht erneut treffen müssen. M\u00F6chten Sie Ihre Entscheidung speichern?
+disambiguation.link.modal.msg                       = Ihre Entscheidung \u00FCber die Person, die mit der Publikation assoziiert werden soll, kann in unserem System gespeichert werden, sodass andere Benutzer diese Entscheidung nicht erneut treffen m\u00FCssen. M\u00F6chten Sie Ihre Entscheidung speichern?
 disambiguation.link.modal.saveButton                = Ja, speichern
 disambiguation.link.modal.title                     = Helfen Sie Ihrer Community mit Ihrer Entscheidung.
 disambiguation.link.modal.viewButton                = Nein, nur die Person anzeigen.
@@ -467,7 +469,7 @@ disambiguation.otherPerson.modal.title              = Person ausw\u00E4hlen oder
 disambiguation.otherPersonButton                    = Andere Person
 disambiguation.person                               = Person
 disambiguation.personsPanelHeader                   = Personen mit dem Namen
-disambiguation.pleaseChooseMsg                      = Bitte wählen Sie eine Person mit dem Namen "{0}" passend zu dem Eintrag:
+disambiguation.pleaseChooseMsg                      = Bitte w\u00E4hlen Sie eine Person mit dem Namen "{0}" passend zu dem Eintrag:
 disambiguation.postPanelHeader                      = Verwandter Eintrag
 disambiguation.searchPersonButton                   = Einen anderen Namen suchen
 
@@ -1415,7 +1417,7 @@ persons.intro.genealogy.desc   = &nbsp;
 persons.intro.genealogy.img    = /resources/image/logo_person_genealogy.svg
 persons.intro.genealogy.text   = Die {0} Genealogie  erstellt nutzerbasiert einen Stammbaum der Forschung an deutschen Universit\u00E4ten. Ausgangspunkt ist der Dissertationskatalog der Deutschen Nationalbibliothek. Nutzerbasiert werden Beziehungen zwischen den an der Dissertation beteiligten Personen (Autor_in, Betreuer_in etc.) erg\u00E4nzt.
 persons.intro.head.desc        = Dissertationsbasierter Stammbaum der Forschung an deutschen Universit\u00E4ten
-persons.intro.head.title       = {0} Genealogie
+persons.intro.head.title       = Genealogie
 persons.intro.navi.dataset     = Wer kann mitmachen?
 persons.intro.navi.genealogy   = Was ist die {0} Genealogie?
 persons.intro.navi.reg         = Wie funktioniert die {0} Genealogie?
@@ -2008,7 +2010,7 @@ settings.advanced                                           = Erweitert
 settings.all                                                = Alle
 settings.alphabet                                           = Alphabet
 settings.apidoc                                             = API-Dokumentation
-settings.apisupport											= Wir konnten Ihren API-Key nicht abrufen. Bitte laden Sie die Seite neu. Wenn das Problem weiterhin besteht, kontaktieren Sie bitte den API-Support: <a href="mailto:api-support@bibsonomy.org">api-support@bibsonomy.org</a>
+settings.apisupport                                         = Wir konnten Ihren API-Key nicht abrufen. Bitte laden Sie die Seite neu. Wenn das Problem weiterhin besteht, kontaktieren Sie bitte den API-Support: <a href="mailto:api-support@bibsonomy.org">api-support@bibsonomy.org</a>
 settings.bookmark                                           = Zeige Lesezeichen
 settings.browser.fileselect                                 = Dateiauswahl
 settings.browser.fileselect.help                            = Eine Datei, die Ihre aus Firefox exportierten Lesezeichen enth\u00E4lt
