resolving #2646 closing #2646... the implementation of Springer Link is now very simple

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/SpringerLinkScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/SpringerLinkScraperUnitURLTest1.bib
@@ -1,16 +1,18 @@
-@incollection{noKey,
-year={2006},
-isbn={978-3-540-34544-2},
-booktitle={The Semantic Web: Research and Applications},
-volume={4011},
-series={Lecture Notes in Computer Science},
-editor={Sure, York and Domingue, John},
-doi={10.1007/11762256_31},
-title={Information Retrieval in Folksonomies: Search and Ranking},
-url={http://dx.doi.org/10.1007/11762256_31},
-publisher={Springer Berlin Heidelberg},
-author={Hotho, Andreas and Jäschke, Robert and Schmitz, Christoph and Stumme, Gerd},
-pages={411-426},
-language={English}
-,abstract = {Social bookmark tools are rapidly emerging on the Web. In such systems users are setting up lightweight conceptual structures called folksonomies. The reason for their immediate success is the fact that no specific skills are needed for participating. At the moment, however, the information retrieval support is limited. We present a formal model and a new search algorithm for folksonomies, called }
+@Article{Lätzel2003,
+author="L{\"a}tzel, M.
+and Luding, S.
+and Herrmann, H. J.
+and Howell, D. W.
+and Behringer, R. P.",
+title="Comparing simulation and experiment of a 2D granular Couette shear device",
+journal="The European Physical Journal E",
+year="2003",
+volume="11",
+number="4",
+pages="325--333",
+abstract="We present experiments along with molecular-dynamics (MD) simulations of a two-dimensional (2D) granular material in a Couette cell undergoing slow shearing. The grains are disks confined between an inner, rotating wheel and a fixed outer ring. The simulation results are compared to experimental studies and quantitative agreement is found. Tracking the positions and orientations of individual particles allows us to obtain density distributions, velocity and particle rotation rates for the system. The key issue of this paper is to show the extent to which  quantitative agreement between an experiment and MD simulations is possible. Besides many differences in model details and the experiment, the qualitative features are nicely reproduced. We discuss the quantitative agreement/disagreement, give possible reasons, and outline further research perspectives.",
+issn="1292-895X",
+doi="10.1140/epje/i2002-10160-7",
+url="http://dx.doi.org/10.1140/epje/i2002-10160-7"
 }
+
