--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/SpringerLinkScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/SpringerLinkScraperUnitURLTest2.bib
@@ -1,15 +1,20 @@
-@incollection{noKey,
-year={2006},
-isbn={978-3-540-34415-5},
-booktitle={Data Science and Classification},
-series={Studies in Classification, Data Analysis, and Knowledge Organization},
-editor={Batagelj, Vladimir and Bock, Hans-Hermann and Ferligoj, Anuška and Žiberna, Aleš},
-doi={10.1007/3-540-34416-0_27},
-title={kNN Versus SVM in the Collaborative Filtering Framework},
-url={http://dx.doi.org/10.1007/3-540-34416-0_27},
-publisher={Springer Berlin Heidelberg},
-author={Grčar, Miha and Fortuna, Blaž and Mladenič, Dunja and Grobelnik, Marko},
-pages={251-260},
-language={English}
-,abstract = {We present experimental results of confronting the k-Nearest Neighbor (kNN) algorithm with Support Vector Machine (SVM) in the collaborative filtering framework using datasets with different properties. While k-Nearest Neighbor is usually used for the collaborative filtering tasks, Support Vector Machine is considered a state-of-the-art classification algorithm. Since collaborative filtering can also be interpreted as a classification/regression task, virtually any supervised learning algorithm (such as SVM) can also be applied. Experiments were performed on two standard, publicly available datasets and, on the other hand, on a real-life corporate dataset that does not fit the profile of ideal data for collaborative filtering. We conclude that the quality of collaborative filtering recommendations is highly dependent on the quality of the data. Furthermore, we can see that kNN is dominant over SVM on the two standard datasets. On the real-life corporate dataset with high level of sparsity, kNN fails as it is unable to form reliable neighborhoods. In this case SVM outperforms kNN.}
+@Inbook{Grčar2006,
+author="Gr{\v{c}}ar, Miha
+and Fortuna, Bla{\v{z}}
+and Mladeni{\v{c}}, Dunja
+and Grobelnik, Marko",
+editor="Batagelj, Vladimir
+and Bock, Hans-Hermann
+and Ferligoj, Anu{\v{s}}ka
+and {\v{Z}}iberna, Ale{\v{s}}",
+title="kNN Versus SVM in the Collaborative Filtering Framework",
+bookTitle="Data Science and Classification",
+year="2006",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg    ",
+pages="251--260",
+isbn="978-3-540-34416-2",
+doi="10.1007/3-540-34416-0_27",
+url="http://dx.doi.org/10.1007/3-540-34416-0_27"
 }
+
