--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/RWTHAachenScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/RWTHAachenScraperUnitURLTest1.bib
@@ -5,6 +5,7 @@
                       potentials},
       address      = {Aachen},
       publisher    = {Publikationsserver der RWTH Aachen University},
+      reportid     = {RWTH-CONV-145297},
       pages        = {351 S. : Ill., graph. Darst.},
       year         = {2014},
       note         = {Zsfassung in dt. und engl. Sprache; Aachen, Techn.
@@ -69,4 +70,3 @@
       urn          = {urn:nbn:de:hbz:82-opus-51548},
       url          = {http://publications.rwth-aachen.de/record/444986},
 }
-
