--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AnnualreviewsScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AnnualreviewsScraperUnitURLTest1.bib
@@ -4,7 +4,7 @@
 
 
 @article{doi:10.1146/annurev.bioeng.6.040803.140250,
-author = {Cowin, Stephen C.},
+author = {Stephen C.  Cowin},
 title = {Tissue Growth and Remodeling},
 journal = {Annual Review of Biomedical Engineering},
 volume = {6},
