--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AnnualreviewsScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AnnualreviewsScraperUnitURLTest3.bib
@@ -4,7 +4,7 @@
 
 
 @article{doi:10.1146/annurev-bioeng-071811-150124,
-author = {Albanese, Alexandre and Tang, Peter S. and Chan, Warren C.W.},
+author = {Alexandre Albanese and Peter S. Tang and Warren C.W. Chan},
 title = {The Effect of Nanoparticle Size, Shape, and Surface Chemistry on Biological Systems},
 journal = {Annual Review of Biomedical Engineering},
 volume = {14},
