--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AipScitationScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AipScitationScraperUnitURLTest1.bib
@@ -6,7 +6,7 @@
    volume = "136",
    number = "3", 
    eid = 031102,
-   pages = "-",
+   pages = "",
    url = "http://scitation.aip.org/content/aip/journal/jcp/136/3/10.1063/1.3680558",
    doi = "http://dx.doi.org/10.1063/1.3680558" 
 ,abstract = {We present a self-contained formulation of spin-free non-relativistic quantum mechanics that makes no use of wavefunctions or complex amplitudes of any kind. Quantum states are represented as ensembles of real-valued quantum trajectories, obtained by extremizing an action and satisfying energy conservation. The theory applies for arbitrary configuration spaces and system dimensionalities. Various beneficial ramifications—theoretical, computational, and interpretational—are discussed.}
