cleaning and the AmazonScraper works again :)

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest7.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest7.bib
@@ -5,7 +5,7 @@ author = {Weiss, Sholom M.},
 isbn = {0387954333 9780387954332 9780387345550 0387345558},
 publisher = {Springer},
 refid = {525024974},
-title = {Text mining predictive methods for analyzing unstructured information},
+title = {Text mining : predictive methods for analyzing unstructured information},
 url = {http://www.amazon.com/Text-Mining-Predictive-Unstructured-Information/dp/0387954333},
 year = {2005}
 }
